2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_lan91cxx.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2001-12-12  Hugo Tyson  <hmt@redhat.com>

	* src/if_lan91cxx.c (lan91cxx_recv): If discarding data due to
	caller out of buffers, we must read-out and discard the packet to
	correctly complete the transaction.  Bogus assert for buffer
	pointer removed; other asserts from not discarding data assuaged
	by first change above.

2001-08-17  Hugo Tyson  <hmt@redhat.com>

	* src/if_lan91cxx.c (lan91cxx_poll): The interrupt acknowledge
	call only occurs in the ISR for this driver because the interrupt
	via GPIO is edge triggered.  We now also acknowledge the interrupt
	within the poll() routine - otherwise RedBoot net use never acks!
	Which doesn't matter if the app uses the net, but in a net-free
	app, it near enough wedges in the resulting interrupt loop.

2001-08-13  Hugo Tyson  <hmt@redhat.com>

	* src/smsc_lan91cxx.h (get_att,put_att): Condition out the inline
	functions if not CYGINT_DEVS_ETH_SMSC_LAN91CXX_PCMCIA_MODE -
	because they don't compile.  Inlines are not like macros.

2001-07-27  Jordi Colomer  <jco@ict.es>

	* cdl/smsc_lan91cxx_eth_drivers.cdl:
	Add interface for whether the hardware is in PCMCIA mode.
	* src/if_lan91cxx.c (smsc_lan91cxx_init):
	Allow for hardware shift addresses
	Initialize appropriately if PCMCIA mode.
	* src/smsc_lan91cxx.h:
	Support address shifts in get_reg,put_Reg, get_data, put_data
	Add new functions get_banksel , put_att and get_att.

2001-07-11  Hugo Tyson  <hmt@redhat.com>

	* src/if_lan91cxx.c (lan91cxx_stop): Clean up any pending tx both
	to prevent mbuf leak due to noncompletion, and to clear tx_busy so
	that the newly upbrung device can be used.
	(lan91cxx_can_send): Similarly detect a stopped tx engine and
	restart it, and clean up any pending tx, in here.  Otherwise the
	system cannot progress.
